fix line-numbering (by forcing nowrap on buffer)

--- a/screen.css
+++ b/screen.css
@@ -53,6 +53,7 @@ body {
 #buffer-frame #buffer {
     height: 100%;
     width: 94%;
+    white-space: nowrap;
 }
 
 .prompt {
